Separate filters for test run and feature views

--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -87,7 +87,7 @@
     </div>
     <div class="checkbox">
       <label>
-        <input type="checkbox" ng-model="ctrl.filters.failed" ng-change="ctrl.updateStoredFilters()"> Echecs
+        <input type="checkbox" ng-model="ctrl.filters.failed" ng-change="ctrl.updateStoredFilters()"> Échecs
       </label>
     </div>
     <div class="checkbox">
@@ -147,7 +147,7 @@
       <th class="col-md-1">Statut</th>
       <th class="col-md-1">Nombre de scénarii</th>
       <th class="col-md-1">Succès</th>
-      <th class="col-md-1">Echecs</th>
+      <th class="col-md-1">Échecs</th>
       <th class="col-md-1">En attente</th>
       <th class="col-md-1">Non joués</th>
     </tr>
