--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -55,7 +55,7 @@
 
       <ul class="dropdown-menu">
         <li><a href ng-click="ctrl.changeStatus('passed')">Succès</a></li>
-        <li><a href ng-click="ctrl.changeStatus('failed')">Echec</a></li>
+        <li><a href ng-click="ctrl.changeStatus('failed')">Échec</a></li>
         <li><a href ng-click="ctrl.changeStatus('not-run')">Non joué</a></li>
         <li><a href ng-click="ctrl.changeStatus('pending')">En attente</a></li>
       </ul>
