--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -45,7 +45,7 @@
     </div>
     <div class="checkbox">
       <label>
-        <input type="checkbox" ng-model="ctrl.filters.failed" ng-change="ctrl.updateStoredFilters()"> Echecs
+        <input type="checkbox" ng-model="ctrl.filters.failed" ng-change="ctrl.updateStoredFilters()"> Échecs
       </label>
     </div>
     <div class="checkbox">
@@ -67,7 +67,7 @@
       <th class="col-md-1">Statut</th>
       <th class="col-md-1">Total</th>
       <th class="col-md-1">Succès</th>
-      <th class="col-md-1">Echecs</th>
+      <th class="col-md-1">Échecs</th>
       <th class="col-md-1">En attente</th>
       <th class="col-md-1">Non joués</th>
     </tr>
