--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -54,10 +54,10 @@
       </button>
 
       <ul class="dropdown-menu">
-        <li><a href ng-click="ctrl.changeStatus('passed')">Succès</a></li>
-        <li><a href ng-click="ctrl.changeStatus('failed')">Échec</a></li>
-        <li><a href ng-click="ctrl.changeStatus('not-run')">Non joué</a></li>
-        <li><a href ng-click="ctrl.changeStatus('pending')">En attente</a></li>
+        <li><a href ng-click="ctrl.changeStatus('PASSED')">Succès</a></li>
+        <li><a href ng-click="ctrl.changeStatus('FAILED')">Échec</a></li>
+        <li><a href ng-click="ctrl.changeStatus('NOT_RUN')">Non joué</a></li>
+        <li><a href ng-click="ctrl.changeStatus('PENDING')">En attente</a></li>
       </ul>
 
     </div>
