--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -139,7 +139,7 @@
 
   <h2>Historique</h2>
 
-  <table class="table table-striped table-bordered">
+  <table class="table table-bordered">
     <thead>
     <tr>
       <th class="col-md-6">Tir</th>
@@ -152,13 +152,12 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="feature in ctrl.history | orderBy:'-testRun.date'">
+    <tr ng-repeat="feature in ctrl.history | orderBy:'-testRun.date'"
+        ng-class="ctrl.feature.testRunId === feature.testRunId && 'active'">
       <td>
         <a ng-href="#/features/{{ feature.id }}">
           {{ feature.testRun.date | date:'dd/MM/yyyy à HH:mm' }}
         </a>
-        <span ng-if="ctrl.feature.testRunId === feature.testRunId" class="glyphicon glyphicon-asterisk"
-              aria-hidden="true"></span>
       </td>
       <td>
         <tc-status status="feature.status"></tc-status>
