--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -152,13 +152,17 @@
   <table class="table table-bordered">
     <thead>
     <tr>
-      <th class="col-md-11">Tir</th>
+      <th class="col-md-1">Environnement</th>
+      <th class="col-md-10">Tir</th>
       <th class="col-md-1">Statut</th>
     </tr>
     </thead>
     <tbody>
     <tr ng-repeat="scenario in ctrl.history | orderBy:'-testRun.date'"
-        ng-class="ctrl.scenario.testRunId === scenario.testRunId && 'active'">
+        ng-class="ctrl.scenario.testRunId === scenario.testRun.id && 'active'">
+      <td>
+        <span class="label label-default">{{ scenario.testRun.env }}</span>
+      </td>
       <td>
         <a ng-href="#/scenarii/{{ scenario.id }}">
           {{ scenario.testRun.date | date:'dd/MM/yyyy à HH:mm' }}
