--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -139,10 +139,23 @@
 
   <h2>Historique</h2>
 
+  <div class="form-inline" style="margin-bottom: 10px">
+    <div class="form-group">
+      <b>Filtrer :</b>
+    </div>
+    <div class="checkbox">
+      <label>
+        <input type="checkbox" ng-model="ctrl.historyFilters.sameTestRun" ng-change="ctrl.updateStoredFilters()">
+        Même environnement de tir
+      </label>
+    </div>
+  </div>
+
   <table class="table table-bordered">
     <thead>
     <tr>
-      <th class="col-md-6">Tir</th>
+      <th class="col-md-1">Environnement</th>
+      <th class="col-md-5">Tir</th>
       <th class="col-md-1">Statut</th>
       <th class="col-md-1">Nombre de scénarii</th>
       <th class="col-md-1">Succès</th>
@@ -152,8 +165,11 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="feature in ctrl.history | orderBy:'-testRun.date'"
-        ng-class="ctrl.feature.testRunId === feature.testRunId && 'active'">
+    <tr ng-repeat="feature in ctrl.history | filter:ctrl.isHistoryItemDisplayable | orderBy:'-testRun.date'"
+        ng-class="ctrl.feature.testRunId === feature.testRun.id && 'active'">
+      <td>
+        <span class="label label-default">{{ feature.testRun.env }}</span>
+      </td>
       <td>
         <a ng-href="#/features/{{ feature.id }}">
           {{ feature.testRun.date | date:'dd/MM/yyyy à HH:mm' }}
