--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -24,8 +24,8 @@
   <table class="table table-striped table-bordered">
     <thead>
     <tr>
-      <th>Tir de test</th>
-      <th>Environnement</th>
+      <th class="col-md-11">Tir de test</th>
+      <th class="col-md-1">Environnement</th>
     </tr>
     </thead>
     <tbody>
