--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -40,22 +40,26 @@
     </div>
     <div class="checkbox">
       <label>
-        <input type="checkbox" ng-model="ctrl.filters.passed" ng-change="ctrl.updateStoredFilters()"> Succès
+        <input type="checkbox" ng-model="ctrl.filters.passed" ng-change="ctrl.updateStoredFilters()">
+        Succès
       </label>
     </div>
     <div class="checkbox">
       <label>
-        <input type="checkbox" ng-model="ctrl.filters.failed" ng-change="ctrl.updateStoredFilters()"> Échecs
+        <input type="checkbox" ng-model="ctrl.filters.failed" ng-change="ctrl.updateStoredFilters()">
+        Échecs
       </label>
     </div>
     <div class="checkbox">
       <label>
-        <input type="checkbox" ng-model="ctrl.filters.partial" ng-change="ctrl.updateStoredFilters()"> Partiels
+        <input type="checkbox" ng-model="ctrl.filters.partial" ng-change="ctrl.updateStoredFilters()">
+        Partiels
       </label>
     </div>
     <div class="checkbox">
       <label>
-        <input type="checkbox" ng-model="ctrl.filters.notRun" ng-change="ctrl.updateStoredFilters()"> Non joués
+        <input type="checkbox" ng-model="ctrl.filters.notRun" ng-change="ctrl.updateStoredFilters()">
+        Non joués
       </label>
     </div>
   </div>
@@ -90,14 +94,14 @@
     </tr>
     </tbody>
     <tfoot ng-hide="filteredFeatures.length == ctrl.testRun.features.length">
-      <tr>
-        <td class="warning" colspan="12" style="text-align: center">
-          Attention :
-          <ng-pluralize count="ctrl.testRun.features.length - filteredFeatures.length"
-                        when="{ 'one': 'une fonctionnalité masquée', 'other': '{} fonctionnalités masquées'}">
-          </ng-pluralize>
-        </td>
-      </tr>
+    <tr>
+      <td class="warning" colspan="12" style="text-align: center">
+        Attention :
+        <ng-pluralize count="ctrl.testRun.features.length - filteredFeatures.length"
+                      when="{ 'one': 'une fonctionnalité masquée', 'other': '{} fonctionnalités masquées'}">
+        </ng-pluralize>
+      </td>
+    </tr>
     </tfoot>
   </table>
 
