--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -12,7 +12,7 @@
   <div class="btn-toolbar" role="toolbar">
     <div class="btn-group" role="group">
 
-      <button ng-click="ctrl.openImportForm()" class="btn btn-primary btn-default">
+      <button ng-click="ctrl.openImportForm()" class="btn btn-default">
         <span class="glyphicon glyphicon-upload" aria-hidden="true"></span>
         Importer un résultat de tests Cucumber
       </button>
@@ -20,7 +20,7 @@
     </div>
     <div class="btn-group" role="group">
 
-      <button ng-click="ctrl.delete()" class="btn btn-danger btn-default">
+      <button ng-click="ctrl.delete()" class="btn btn-danger">
         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
         Supprimer
       </button>
