--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -11,7 +11,7 @@
   <div class="btn-toolbar" role="toolbar">
     <div class="btn-group" role="group">
 
-      <button type="button" class="btn btn-primary btn-default" ng-click="ctrl.openCreateForm()">
+      <button type="button" class="btn btn-default" ng-click="ctrl.openCreateForm()">
         <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
         Créer un tir de tests
       </button>
