--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -34,7 +34,7 @@
 
   <h2>Complétion</h2>
 
-  <tc-progress total="ctrl.testRun.statsForFeatures.featureCount"
+  <tc-progress total="ctrl.testRun.statsForFeatures.count"
                success="ctrl.testRun.statsForFeatures.statsByStatus['PASSED']"
                warning="ctrl.testRun.statsForFeatures.statsByStatus['PARTIAL']"
                danger="ctrl.testRun.statsForFeatures.statsByStatus['FAILED']">
@@ -98,7 +98,7 @@
       <td>
         <tc-status status="feature.status"></tc-status>
       </td>
-      <td><span class="badge">{{ feature.stats.scenarioCount }}</span></td>
+      <td><span class="badge">{{ feature.stats.count }}</span></td>
       <td><span class="badge">{{ feature.stats.statsByStatus['PASSED'] }}</span></td>
       <td><span class="badge">{{ feature.stats.statsByStatus['FAILED'] }}</span></td>
       <td><span class="badge">{{ feature.stats.statsByStatus['PENDING'] }}</span></td>
