--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -62,7 +62,7 @@
 
   <hr>
 
-  <h2>Complétion</h2>
+  <h2>Avancement</h2>
 
   <tc-progress total="ctrl.feature.stats.count"
                success="ctrl.feature.stats.statsByStatus['PASSED']"
@@ -110,7 +110,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="scenario in filteredScenarii = (ctrl.feature.scenarii | filter:ctrl.isScenarioDisplayable)">
+    <tr ng-repeat="scenario in ctrl.feature.scenarii | filter:ctrl.isScenarioDisplayable as filteredScenarii track by scenario.id">
       <td>
         <a ng-href="#/scenarii/{{ scenario.id }}">
           <tc-element-info info="scenario.info"></tc-element-info>
@@ -165,7 +165,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="feature in ctrl.history | filter:ctrl.isHistoryItemDisplayable | orderBy:'-testRun.date'"
+    <tr ng-repeat="feature in ctrl.history | filter:ctrl.isHistoryItemDisplayable | orderBy:'-testRun.date' track by feature.testRun.id"
         ng-class="ctrl.feature.testRunId == feature.testRun.id && 'active'">
       <td>
         <span class="label label-default">{{ feature.testRun.env }}</span>
