--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -49,6 +49,7 @@
       <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
               aria-haspopup="true"
               aria-expanded="false">
+        <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
         Modifier le statut
         <span class="caret"></span>
       </button>
@@ -135,7 +136,7 @@
 
   <h2>Commentaires</h2>
 
-  <div ng-repeat="comment in ctrl.comments">
+  <div ng-repeat="comment in ctrl.comments track by comment.id">
     <h5>Le {{ comment.date | date:'dd/MM/yyyy à HH:mm:ss' }}</h5>
     <p>
       <tc-line-breaks content="comment.content"></tc-line-breaks>
@@ -178,8 +179,9 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="scenario in ctrl.history | filter:ctrl.isHistoryItemDisplayable | orderBy:'-testRun.date'"
-        ng-class="ctrl.scenario.testRunId == scenario.testRun.id && 'active'">
+    <tr
+      ng-repeat="scenario in ctrl.history | filter:ctrl.isHistoryItemDisplayable | orderBy:'-testRun.date' track by scenario.testRun.id"
+      ng-class="ctrl.scenario.testRunId == scenario.testRun.id && 'active'">
       <td>
         <span class="label label-default">{{ scenario.testRun.env }}</span>
       </td>
