--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -24,17 +24,17 @@
   <table class="table table-striped table-bordered">
     <thead>
     <tr>
-      <th class="col-md-11">Tir de test</th>
       <th class="col-md-1">Environnement</th>
+      <th class="col-md-11">Tir de test</th>
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="testRun in ctrl.latestTestRuns">
-      <td>
-        <a ng-href="#/test-runs/{{ testRun.id }}">Tir du {{ testRun.date | date:'dd/MM/yyyy à HH:mm' }}</a>
-      </td>
+    <tr ng-repeat="testRun in ctrl.latestTestRuns track by testRun.id">
       <td>
         <span class="label label-default">{{ testRun.env }}</span>
+      </td>
+      <td>
+        <a ng-href="#/test-runs/{{ testRun.id }}">Tir du {{ testRun.date | date:'dd/MM/yyyy à HH:mm' }}</a>
       </td>
     </tr>
     </tbody>
