--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -198,7 +198,7 @@
     </thead>
     <tbody>
     <tr
-      ng-repeat="scenario in ctrl.history | filter:ctrl.isHistoryItemDisplayable | orderBy:'-testRun.date' track by scenario.testRun.id"
+      ng-repeat="scenario in ctrl.history | filter:ctrl.isHistoryItemDisplayable track by scenario.testRun.id"
       ng-class="ctrl.scenario.testRunId == scenario.testRun.id && 'active'">
       <td>
         <span class="label label-default">{{ scenario.testRun.env }}</span>
