Stats on test run view

--- a/tests-cucumber-ui/app/views/test-runs.html
+++ b/tests-cucumber-ui/app/views/test-runs.html
@@ -25,7 +25,12 @@
     <thead>
     <tr>
       <th class="col-md-1">Environnement</th>
-      <th class="col-md-11">Tir de test</th>
+      <th class="col-md-6">Tir de test</th>
+      <th class="col-md-1">Total</th>
+      <th class="col-md-1">Succès</th>
+      <th class="col-md-1">Échecs</th>
+      <th class="col-md-1">Partiels</th>
+      <th class="col-md-1">Non joués</th>
     </tr>
     </thead>
     <tbody>
@@ -36,6 +41,11 @@
       <td>
         <a ng-href="#/test-runs/{{ testRun.id }}">Tir du {{ testRun.date | date:'dd/MM/yyyy à HH:mm' }}</a>
       </td>
+      <td><span class="badge">{{ testRun.stats.count }}</span></td>
+      <td><span class="badge">{{ testRun.stats.statsByStatus['PASSED'] }}</span></td>
+      <td><span class="badge">{{ testRun.stats.statsByStatus['FAILED'] }}</span></td>
+      <td><span class="badge">{{ testRun.stats.statsByStatus['PARTIAL'] }}</span></td>
+      <td><span class="badge">{{ testRun.stats.statsByStatus['NOT_RUN'] }}</span></td>
     </tr>
     </tbody>
   </table>
