--- a/tests-cucumber-ui/app/views/scenario.html
+++ b/tests-cucumber-ui/app/views/scenario.html
@@ -173,18 +173,16 @@
 
   <h2>Historique</h2>
 
-  <div class="form-inline" style="margin-bottom: 10px">
+  <div class="form" style="margin-bottom: 10px">
 
     <div class="form-group">
       <b>Filtrer :</b>
     </div>
 
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" ng-model="ctrl.filters.sameTestRun" ng-change="ctrl.updateStoredFilters()">
-        Même environnement de tir
-      </label>
-    </div>
+    <label class="checkbox-inline">
+      <input type="checkbox" ng-model="ctrl.filters.sameTestRun" ng-change="ctrl.updateStoredFilters()">
+      Même environnement de tir
+    </label>
 
   </div>
 
