--- a/tests-cucumber-ui/app/views/feature.html
+++ b/tests-cucumber-ui/app/views/feature.html
@@ -57,11 +57,15 @@
 
   <!-- Description -->
 
-  <hr>
+  <div ng-show="ctrl.feature.description">
 
-  <p>
-    <tc-line-breaks content="ctrl.feature.description"></tc-line-breaks>
-  </p>
+    <hr>
+
+    <p>
+      <tc-line-breaks content="ctrl.feature.description"></tc-line-breaks>
+    </p>
+
+  </div>
 
   <!-- Stats -->
 
@@ -82,6 +86,7 @@
   <h2>Scénarii</h2>
 
   <div class="form" style="margin-bottom: 10px">
+
     <div class="form-group">
       <b>Filtrer par statut :</b>
       <label class="checkbox-inline">
