View tags for a test run

--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -20,6 +20,14 @@
     </div>
     <div class="btn-group" role="group">
 
+      <button ng-click="ctrl.viewTags()" class="btn btn-default">
+        <span class="glyphicon glyphicon-tags" aria-hidden="true"></span>
+        Statistiques par tag
+      </button>
+
+    </div>
+    <div class="btn-group" role="group">
+
       <button ng-click="ctrl.delete()" class="btn btn-danger">
         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
         Supprimer
