--- a/tests-cucumber-ui/app/views/test-run.html
+++ b/tests-cucumber-ui/app/views/test-run.html
@@ -2,10 +2,10 @@
 
   <ol class="breadcrumb">
     <li>Environnement {{ ctrl.testRun.env }}</li>
-    <li class="active">Tir du {{ ctrl.testRun.date | date:'dd/MM/yyyy à HH:mm' }}</li>
+    <li class="active">Tir du {{ ctrl.testRun.date | niceDate }}</li>
   </ol>
 
-  <h1>Tir du {{ ctrl.testRun.date | date:'dd/MM/yyyy à HH:mm' }}</h1>
+  <h1>Tir du {{ ctrl.testRun.date | niceDate }}</h1>
 
   <hr>
 
@@ -160,7 +160,7 @@
         ng-class="ctrl.testRun.id == testRun.id && 'active'">
       <td>
         <a ng-href="#/test-runs/{{ testRun.id }}">
-          {{ testRun.date | date:'dd/MM/yyyy à HH:mm' }}
+          {{ testRun.date | niceDate }}
         </a>
       </td>
       <td><span class="badge">{{ testRun.stats.count }}</span></td>
